--- a/public/assets/css/animate.css
+++ b/public/assets/css/animate.css
@@ -372,7 +372,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     transform: scale(1) rotate(0);
   }
 }
-Chatrova
+Creatorai
 .tada {
   -webkit-animation-name: tada;
   animation-name: tada;
