--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 
 /*
 Author       : themes_mountain 
-Template Name: Chatrova - AI Content Generator & Writing HTML Template
+Template Name: Creatorai - AI Content Generator & Writing HTML Template
 Version      : 1.0
 */
 /*=============================================================
