--- a/public/themes/default/layouts/landing_theme.twig
+++ b/public/themes/default/layouts/landing_theme.twig
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Chatrova - AI Content Generator to suite you daily needs">
+    <meta name="description" content="Creatorai - AI Content Generator to suite you daily needs">
     <meta name="keywords" content="themes_mountain,  ai, ai copywriting, ai writer, chatbot, content creation, content writer, content writing, copywriting, landing, neural network, openai, responsive, voice generator  seo theme, smm, smm agency, social media, web development, website analysis ">
     <meta name="author" content="theme_ocean">
     <!-- SITE TITLE -->
-    <title>Chatrova - AI Content Generator.</title>
+    <title>Creatorai - AI Content Generator.</title>
     <link rel="icon" type="image/x-icon"
           href="{{ option.brand.favicon ?? 'assets/favicon.ico' }}">
     <link rel="stylesheet" href="assets/img/chatrova.png">
