--- a/public/themes/default/templates/home.twig
+++ b/public/themes/default/templates/home.twig
@@ -17,7 +17,7 @@
 							<b>Convert Speech to text</b>
 							</span>
 						</h1>
-						<p>Chatrova helps users effortlessly generate high-quality AI-driven content tailored to your needs. Unlock limitless possibilities, save your time and start making money today! </p>
+						<p>Creatorai helps users effortlessly generate high-quality AI-driven content tailored to your needs. Unlock limitless possibilities, save your time and start making money today! </p>
 					</div>
 					<div class="home_btn">
 						<a href="/signup" class="home_one">Get started</a>
@@ -174,7 +174,7 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<p>Chatrova's writing capabilities are exceptional! Whether I need help crafting a compelling blog post or drafting a professional email, Chatrova delivers top-notch results. Its ability to understand context and tone is truly impressive. Highly recommend for anyone looking to enhance their writing!</p>
+								<p>Creatorai's writing capabilities are exceptional! Whether I need help crafting a compelling blog post or drafting a professional email, Creatorai delivers top-notch results. Its ability to understand context and tone is truly impressive. Highly recommend for anyone looking to enhance their writing!</p>
 							</div>
 							<div class="pic_content">
 								<div class="rev_pic">
@@ -191,7 +191,7 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<p>Chatrova's coding skills are next level! It's like having a skilled developer by your side, ready to assist with any coding task. Whether I'm working on a complex algorithm or debugging a tricky issue, Chatrova always comes through. It's a must-have tool for any programmer!</p>
+								<p>Creatorai's coding skills are next level! It's like having a skilled developer by your side, ready to assist with any coding task. Whether I'm working on a complex algorithm or debugging a tricky issue, Creatorai always comes through. It's a must-have tool for any programmer!</p>
 							</div>
 							<div class="pic_content">
 								<div class="rev_pic">
@@ -208,7 +208,7 @@
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
 								<i class="fa fa-star"></i>
-								<p>Using Chatrova makes transcribing audio and video a breeze! Its accuracy and speed are unmatched, saving me hours of tedious work. Whether I'm transcribing interviews, meetings, or lectures, Chatrova delivers precise transcripts every time. A game-changer for anyone in need of transcription services!</p>
+								<p>Using Creatorai makes transcribing audio and video a breeze! Its accuracy and speed are unmatched, saving me hours of tedious work. Whether I'm transcribing interviews, meetings, or lectures, Creatorai delivers precise transcripts every time. A game-changer for anyone in need of transcription services!</p>
 							</div>
 							<div class="pic_content">
 								<div class="rev_pic">
