--- a/resources/views/sections/aside.twig
+++ b/resources/views/sections/aside.twig
@@ -13,7 +13,7 @@
         <img src="/assets/img/chatrova.png"
           alt="{{ option.site.name ?? 'Logo'  }}"
           class="block group-data-[mode=dark]/html:hidden  max-w-[140px] h-8 object-contain object-left">
-      </a> <h3><b>ChatRova</b></h3>
+      </a> <h3><b>Creatorai</b></h3>
 
       <button
         class="w-6 h-8 text-intermediate-content-dimmed hover:text-intermediate-content"
